--- a/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
@@ -4,31 +4,41 @@
         <div class="logo-icon">
             <i class="fas fa-pepper-hot"></i>
         </div>
-        <span class="logo-text">BIGFOOD</span>
+        BIGFOOD
     </div>
 
     <nav>
         <a href="#" class="nav-item">
             <i class="fas fa-th-large"></i>
-            <span class="nav-text">Menu</span>
+            Menu
         </a>
         <a href="#" class="nav-item active">
             <i class="fas fa-utensils"></i>
-            <span class="nav-text">Table Services</span>
+            Table Services
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-calendar-alt"></i>
+            Reservation
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-truck"></i>
+            Delivery
         </a>
         <a href="#" class="nav-item">
             <i class="fas fa-calculator"></i>
-            <span class="nav-text">Accounting</span>
+            Accounting
         </a>
         <a href="#" class="nav-item">
             <i class="fas fa-cog"></i>
-            <span class="nav-text">Settings</span>
+            Settings
         </a>
     </nav>
 
     <a href="#" class="nav-item logout">
         <i class="fas fa-sign-out-alt"></i>
-        <span class="nav-text">Logout</span>
+        Logout
     </a>
 </div>
 
+<!-- Mobile Overlay -->
+<div class="mobile-overlay" id="mobileOverlay"></div>
