Load page in realtime with ajax, fix some bugs

--- a/OrderFood_SW/Views/CustomerOrder/Index.cshtml
+++ b/OrderFood_SW/Views/CustomerOrder/Index.cshtml
@@ -2,4 +2,14 @@
     Layout = "_CustomerLayout";
 }
 
-<a style="text-align:center; margin-top: 200px" href="~/CustomerOrder/CreateOrder">Click Here !</a>
+<a style="text-align:center; margin-top: 200px" href="~/CustomerOrder/CreateOrder?tableId=1">QR 1</a>
+
+<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=2">QR 2</a>
+
+<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=3">QR 3</a>
+
+<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=4">QR 4</a>
+
+<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=5">QR 5</a>
+
+<a style="text-align:center; margin-top: 10px" href="~/CustomerOrder/CreateOrder?tableId=6">QR 6</a>
